--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,3 +1,10 @@
 .wrapper-content {
     margin-top: 60px;
 }
+
+.global-fab {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1000;
+}
