--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -9,7 +9,7 @@
         <mat-icon>close</mat-icon>
     </button>
 
-    <a routerLink="/tracking" routerLinkActive="active" (click)="closeMenu()">
+    <a routerLink="/training" routerLinkActive="active" (click)="closeMenu()">
         <mat-icon>sports_baseball</mat-icon>
         <span>Träning</span>
     </a>
