--- a/frontend/src/app/pages/profile/profile.component.css
+++ b/frontend/src/app/pages/profile/profile.component.css
@@ -3,11 +3,30 @@
     justify-content: center;
     flex-direction: column;
     /* background-color: #13232E; */
-    background-color: #2F4858;
+    /* background-color: #2F4858; */
     /* background-color: #6F7E5B; */
     padding: 20px;
     height: 100%;
 }
+
+.picture {
+    position: relative;
+    margin-left: -50vw;
+    margin-right: -50vw;
+    width: 100vw;
+    margin-top: -15%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    height: 300px;
+    background-image: url('/assets/backgrounds/63f3a26d-7fd3-4442-8982-4f870d956e79.webp');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 
 .header {
     border-radius: 12px;
@@ -44,7 +63,6 @@
     margin-bottom: 15px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     color: black;
-
 }
 
 .profile-card h2,
@@ -279,7 +297,7 @@ mat-select {
     text-align: center;
     font-size: 1.2rem;
     font-weight: 700;
-    color: white;
+    color: black;
 }
 
 
