--- a/frontend/src/app/pages/history/history.component.html
+++ b/frontend/src/app/pages/history/history.component.html
@@ -39,5 +39,5 @@
 
 
 
-    <app-calendar [recentSessions]="recentSessions"></app-calendar>
+    <app-calendar [recentSessions]="recentSessions" [dogs]="dogs" [selectedDogId]="selectedDogId"></app-calendar>
 </section>
